force-app/main/default/objects/Colonias_U__c/Colonias_U__c.object-meta.xml
<CustomObject>
    <label>Colonia_U (otras)</label>
    <nameField>
        <label>Nombre de Colonias_U</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Colonias (Otras)</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>