force-app/main/default/objects/Colonias_U__c/fields/codigo_colonia__c.field-meta.xml
<CustomField>
    <fullName>codigo_colonia__c</fullName>
    <label>codigo_colonia</label>
    <length>15</length>
    <type>Text</type>
</CustomField>