force-app/main/default/objects/Colonias_U__c/fields/codigo_municipio__c.field-meta.xml
<CustomField>
    <fullName>codigo_municipio__c</fullName>
    <label>codigo_municipio</label>
    <length>15</length>
    <type>Text</type>
</CustomField>