force-app/main/default/objects/Colonias_U__c/fields/codigo_pais__c.field-meta.xml
<CustomField>
    <fullName>codigo_pais__c</fullName>
    <label>codigo_pais</label>
    <length>15</length>
    <type>Text</type>
</CustomField>