force-app/main/default/objects/Colonias_U__c/fields/nombre_colonia__c.field-meta.xml
<CustomField>
    <fullName>nombre_colonia__c</fullName>
    <label>nombre_colonia</label>
    <length>150</length>
    <type>Text</type>
</CustomField>