force-app/main/default/objects/Colonias_U__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>codigo_colonia__c</columns>
    <columns>codigo_departamento__c</columns>
    <columns>codigo_municipio__c</columns>
    <columns>codigo_pais__c</columns>
    <columns>nombre_colonia__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>codigo_pais__c</field>
        <operation>equals</operation>
        <value>053</value>
    </filters>
    <label>Todos</label>
</ListView>